# FinHub

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_LOCAL.md  reset-local-db.sh  restart-frontend.sh  run-local.sh  stop-local.sh
backend/: .env.example  .env.production.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260403_0001_init.py  20260403_0002_recurring.py  20260403_0003_manual_planned_items.py  20260403_0004_bank_connections.py  20260403_0005_categories.py  20260410_0006_budgets.py  20260410_0007_auth.py  20260410_0008_google_oauth.py  20260415_0009_user_scope.py  20260415_0010_user_profile.py  20260415_0011_session_metadata.py  20260531_0001_add_new_tables.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  csrf.py  exceptions.py  logging.py  security.py
backend/app/db/: init_local.py  reassign_legacy.py  seed.py  session.py
backend/app/models/: __init__.py  asset.py  asset_group.py  asset_value.py  auth.py  bank_connection.py  budget.py  categories.py  common.py  entities.py  goal.py  manual.py  recurring.py  rule.py  transaction_split.py  two_factor.py
backend/app/schemas/: accounts.py  auth.py  bank_connection.py  budget.py  categories.py  duplicates.py  institutions.py  manual.py  overview.py  recurring.py  reports.py  transactions.py  (+1 more)
backend/finhub_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_error_handling.py  test_health.py  test_reconciliation.py  test_transactions.py
(+100 files in other folders)
