[project]
name = "finhub-backend"
version = "0.1.0"
description = "Backend for FinHub"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "alembic>=1.13.0",
  "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
